--- a/OR_FP.ipynb
+++ b/OR_FP.ipynb
@@ -2,61 +2,311 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import gurobipy as gp\n"
+    "from gurobipy import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a new model\n",
-    "model = gp.Model(\"ParkingLotOptimization\")\n",
+    "##### Model #####\n",
     "\n",
-    "# Define decision variables\n",
+    "model = Model('model')\n",
     "\n",
-    "# Define objective function\n",
     "\n",
-    "# Add constraints\n",
+    "##### Parameters #####\n",
     "\n",
-    "# Set solver parameters\n"
+    "''' Adjust size of the parking lot '''\n",
+    "B = 120.0       # Width of parking lot\n",
+    "L = 120.0       # Length of parking lot (Length of exterior rows)\n",
+    "w = 7.0         # Width of the road at top and bottom\n",
+    "l = L - 2*w     # Length of interior rows\n",
+    "'''--------------------------------'''\n",
+    "\n",
+    "''' Adjust angles of a parking spot row '''   \n",
+    "num_of_angles = 5\n",
+    "angle_set = [90, 75, 60, 45, 30]\n",
+    "'''-------------------------------------''' \n",
+    "\n",
+    "''' Change parameters here if angles changed '''\n",
+    "A2 = [2.5, 2.7, 2.8, 3.5, 5.6] # Bay width for car, parallel to aisle\n",
+    "A3 = [1.0, 1.08, 1.12, 1.4, 2.24]  # Bay width for motorcylcle, parallel to aisle\n",
+    "C1 = [5.0, 5.5, 5.6, 5.3, 4.5] # Bay depth to wall for car\n",
+    "C4 = [6.0, 6.5, 6.6, 6.3, 5.5] # Bay depth to wall for electric car\n",
+    "C5 = [2.0, 2.2, 2.24, 2.12, 1.8] # Bay depth to wall for motorcylcle\n",
+    "\n",
+    "D  = [7.0, 6.0, 4.5, 3.75, 3.5] # Aisle width between bay lines\n",
+    "F1 = [18.0, 17.75, 15.65, 13.45, 11.4] # Module, wall to interlock\n",
+    "F3 = [18.0, 17.4, 14.8, 12.55, 10.3] # Module, interlock to interlock\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Variables"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Optimize the model\n",
-    "model.optimize()\n",
+    "# angle set = [90, 75, 60, 45, 30]\n",
+    "X = [] # number of full interiors rows for car\n",
+    "Xe = [] # number of full exteriors rows for car\n",
+    "E = [] # number of exteriors rows for car\n",
+    "XBev = [] # number of full interiors rows for electric car\n",
+    "XeBev = [] \n",
+    "EBev = []\n",
+    "XMot = [] # number of full interiors rows for motorcycle\n",
+    "XeMot = []\n",
+    "EMot = []\n",
     "\n",
-    "# Retrieve and analyze results\n",
-    "if model.status == gp.GRB.OPTIMAL:\n",
-    "    # Extract the solution\n",
-    "    solution = model.getAttr('x')\n",
+    "n = []\n",
+    "ne = []\n",
+    "nEE = []\n",
+    "nBev = [] # number of full interiors bays for electric car\n",
+    "neBev = []\n",
+    "nEEBev = []\n",
+    "nMot = []  # number of full interiors bays for motorcycle\n",
+    "neMot = []\n",
+    "nEEMot = []\n",
     "\n",
-    "    # Analyze the results\n",
+    "for i in range(num_of_angles):\n",
+    "    X.append(model.addVar(lb=0, vtype=GRB.INTEGER, name='X'+str(angle_set[i])))\n",
+    "    Xe.append(model.addVar(lb=0, vtype=GRB.INTEGER, name='Xe'+str(angle_set[i])))\n",
+    "    E.append(model.addVar(lb=0, vtype=GRB.INTEGER, name='E'+str(angle_set[i])))\n",
+    "    XBev.append(model.addVar(lb=0, vtype=GRB.INTEGER, name='XBev'+str(angle_set[i])))\n",
+    "    XeBev.append(model.addVar(lb=0, vtype=GRB.INTEGER, name='XeBev'+str(angle_set[i])))\n",
+    "    EBev.append(model.addVar(lb=0, vtype=GRB.INTEGER, name='EBev'+str(angle_set[i])))\n",
+    "    XMot.append(model.addVar(lb=0, vtype=GRB.INTEGER, name='XMot'+str(angle_set[i])))\n",
+    "    XeMot.append(model.addVar(lb=0, vtype=GRB.INTEGER, name='XeMot'+str(angle_set[i])))\n",
+    "    EMot.append(model.addVar(lb=0, vtype=GRB.INTEGER, name='EMot'+str(angle_set[i])))   \n",
+    "    \n",
+    "    n.append(model.addVar(lb=0, vtype=GRB.INTEGER, name='n'+str(angle_set[i])))\n",
+    "    ne.append(model.addVar(lb=0, vtype=GRB.INTEGER, name='ne'+str(angle_set[i])))\n",
+    "    nEE.append(model.addVar(lb=0, vtype=GRB.INTEGER, name='nEE'+str(angle_set[i])))\n",
+    "    nBev.append(model.addVar(lb=0, vtype=GRB.INTEGER, name='nBev'+str(angle_set[i])))\n",
+    "    neBev.append(model.addVar(lb=0, vtype=GRB.INTEGER, name='neBev'+str(angle_set[i])))\n",
+    "    nEEBev.append(model.addVar(lb=0, vtype=GRB.INTEGER, name='nEEBev'+str(angle_set[i])))\n",
+    "    nMot.append(model.addVar(lb=0, vtype=GRB.INTEGER, name='nMot'+str(angle_set[i])))\n",
+    "    neMot.append(model.addVar(lb=0, vtype=GRB.INTEGER, name='neMot'+str(angle_set[i])))\n",
+    "    nEEMot.append(model.addVar(lb=0, vtype=GRB.INTEGER, name='nEEMot'+str(angle_set[i])))    \n",
     "\n",
-    "    # Print the optimized layout and maximum number of parking spots achieved\n",
-    "    print(\"Optimized parking layout:\")\n",
-    "    # Display the layout\n",
+    "# z = 1 if a row is for car\n",
+    "z = model.addVar(lb=0, vtype = GRB.BINARY, name = \"z\")\n",
+    "# ze = model.addVar(lb=0, vtype = GRB.BINARY, name = \"ze\")\n",
+    "# zEE = model.addVar(lb=0, vtype = GRB.BINARY, name = \"zEE\")\n",
+    "# zBev = 1 if a row is for electric car\n",
+    "zBev = model.addVar(lb=0, vtype = GRB.BINARY, name = \"zBev\")\n",
+    "# zeBev = model.addVar(lb=0, vtype = GRB.BINARY, name = \"zeBev\")\n",
+    "# zEEBev = model.addVar(lb=0, vtype = GRB.BINARY, name = \"zEEBev\")\n",
+    "# zMot = 1 if a row is for motorcycle\n",
+    "zMot = model.addVar(lb=0, vtype = GRB.BINARY, name = \"zMot\")\n",
+    "# zeMot = model.addVar(lb=0, vtype = GRB.BINARY, name = \"zeMot\")\n",
+    "# zEEMot = model.addVar(lb=0, vtype = GRB.BINARY, name = \"zEEMot\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##### Objective #####\n",
     "\n",
-    "    print(\"Maximum number of parking spots:\", model.objVal)\n",
+    "# Maximize the total number of parking spots\n",
+    "model.setObjective(\n",
+    "    quicksum(n[i] + ne[i] + nEE[i] + nBev[i] + nMot[i] for i in range(num_of_angles)),\n",
+    "    GRB.MAXIMIZE)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Constraints"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<gurobi.Constr *Awaiting Model Update*>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Total width of full interior rows, full exterior rows, and exterior rows should be less than the width of  the parking lot\n",
+    "model.addConstr(quicksum(F3[i]*X[i] + F1[i]*Xe[i] + (C1[i]+D[i])*E[i] for i in range(num_of_angles)) <= B)\n",
     "\n",
-    "# Dispose of the model\n",
-    "model.dispose()"
+    "# The number of spots in each rows should be less than its upper bound\n",
+    "# Upper bound = (max length of row / width of a spot) * number of rows\n",
+    "model.addConstrs(l//A2[i]*2*X[i] >= n[i] for i in range(num_of_angles))\n",
+    "model.addConstrs(l//A2[i]*Xe[i] + L//A2[i]*Xe[i] >= ne[i] for i in range(num_of_angles))\n",
+    "model.addConstrs(L//A2[i]*E[i] >= nEE[i] for i in range(num_of_angles))\n",
+    "\n",
+    "model.addConstrs(l//A2[i]*2*XBev[i] >= nBev[i] for i in range(num_of_angles))\n",
+    "model.addConstrs(l//A2[i]*XeBev[i] + L//A2[i]*XeBev[i] >= neBev[i] for i in range(num_of_angles))\n",
+    "model.addConstrs(L//A2[i]*EBev[i] >= nEEBev[i] for i in range(num_of_angles))\n",
+    "\n",
+    "model.addConstrs(l//A3[i]*2*XMot[i] >= nMot[i] for i in range(num_of_angles))\n",
+    "model.addConstrs(l//A3[i]*XeMot[i] + L//A3[i]*XeMot[i] >= neMot[i] for i in range(num_of_angles))\n",
+    "model.addConstrs(L//A3[i]*EMot[i] >= nEEMot[i] for i in range(num_of_angles))\n",
+    "\n",
+    "# There should be exactly two exterior rows\n",
+    "model.addConstr(quicksum(Xe[i] + E[i] + XeBev[i] + EBev[i] + XeMot[i] + EMot[i]for i in range(num_of_angles)) == 2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gurobi Optimizer version 10.0.1 build v10.0.1rc0 (win64)\n",
+      "\n",
+      "CPU model: Intel(R) Core(TM) i5-1035G1 CPU @ 1.00GHz, instruction set [SSE2|AVX|AVX2|AVX512]\n",
+      "Thread count: 4 physical cores, 8 logical processors, using up to 8 threads\n",
+      "\n",
+      "Optimize a model with 17 rows, 50 columns and 55 nonzeros\n",
+      "Model fingerprint: 0x7de5fd84\n",
+      "Variable types: 0 continuous, 50 integer (0 binary)\n",
+      "Coefficient statistics:\n",
+      "  Matrix range     [1e+00, 9e+01]\n",
+      "  Objective range  [1e+00, 1e+00]\n",
+      "  Bounds range     [0e+00, 0e+00]\n",
+      "  RHS range        [2e+00, 1e+02]\n",
+      "Found heuristic solution: objective 42.0000000\n",
+      "Presolve removed 15 rows and 37 columns\n",
+      "Presolve time: 0.00s\n",
+      "Presolved: 2 rows, 13 columns, 21 nonzeros\n",
+      "Variable types: 0 continuous, 13 integer (0 binary)\n",
+      "Found heuristic solution: objective 558.0000000\n",
+      "\n",
+      "Root relaxation: objective 6.015000e+02, 2 iterations, 0.00 seconds (0.00 work units)\n",
+      "\n",
+      "    Nodes    |    Current Node    |     Objective Bounds      |     Work\n",
+      " Expl Unexpl |  Obj  Depth IntInf | Incumbent    BestBd   Gap | It/Node Time\n",
+      "\n",
+      "     0     0  601.50000    0    1  558.00000  601.50000  7.80%     -    0s\n",
+      "H    0     0                     591.0000000  601.50000  1.78%     -    0s\n",
+      "     0     0  600.62887    0    3  591.00000  600.62887  1.63%     -    0s\n",
+      "     0     0  598.04348    0    2  591.00000  598.04348  1.19%     -    0s\n",
+      "H    0     0                     592.0000000  598.04348  1.02%     -    0s\n",
+      "     0     0  596.91045    0    4  592.00000  596.91045  0.83%     -    0s\n",
+      "\n",
+      "Cutting planes:\n",
+      "  Gomory: 1\n",
+      "  MIR: 3\n",
+      "  StrongCG: 1\n",
+      "\n",
+      "Explored 1 nodes (7 simplex iterations) in 0.07 seconds (0.00 work units)\n",
+      "Thread count was 8 (of 8 available processors)\n",
+      "\n",
+      "Solution count 4: 592 591 558 42 \n",
+      "\n",
+      "Optimal solution found (tolerance 1.00e-04)\n",
+      "Best objective 5.920000000000e+02, best bound 5.920000000000e+02, gap 0.0000%\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.optimize()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results = open('LP_results.csv', 'w')\n",
+    "\n",
+    "results.write(f'B, {B}')\n",
+    "results.write(f'\\nL, {L}')\n",
+    "results.write(f'\\nw, {w}')\n",
+    "\n",
+    "results.write(f'\\nobj. value, {model.objVal}')\n",
+    "\n",
+    "results.write(f'\\nvar\\\\angle')\n",
+    "for i in range(num_of_angles):\n",
+    "    results.write(f',{angle_set[i]}')\n",
+    "    \n",
+    "results.write(f'\\nX')\n",
+    "for i in range(num_of_angles):\n",
+    "    results.write(f',{X[i].x}')\n",
+    "    \n",
+    "results.write(f'\\nXe')\n",
+    "for i in range(num_of_angles):\n",
+    "    results.write(f',{Xe[i].x}')\n",
+    "    \n",
+    "results.write(f'\\nE')\n",
+    "for i in range(num_of_angles):\n",
+    "    results.write(f',{E[i].x}')\n",
+    "    \n",
+    "results.write(f'\\nn')\n",
+    "for i in range(num_of_angles):\n",
+    "    results.write(f',{n[i].x}')\n",
+    "    \n",
+    "results.write(f'\\nne')\n",
+    "for i in range(num_of_angles):\n",
+    "    results.write(f',{ne[i].x}')\n",
+    "    \n",
+    "results.write(f'\\nnEE')\n",
+    "for i in range(num_of_angles):\n",
+    "    results.write(f',{nEE[i].x}')\n",
+    "\n",
+    "results.close()"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.2"
   },
   "orig_nbformat": 4
  },
