--- a/OR_FP.ipynb
+++ b/OR_FP.ipynb
@@ -38,12 +38,14 @@
     "A2 = [2.5, 2.7, 2.8, 3.5, 5.6] # Bay width for car, parallel to aisle\n",
     "A3 = [1.0, 1.08, 1.12, 1.4, 2.24]  # Bay width for motorcylcle, parallel to aisle\n",
     "C1 = [5.0, 5.5, 5.6, 5.3, 4.5] # Bay depth to wall for car\n",
+    "C3 = [5.00, 5.15, 5.05, 4.40, 3.40] # Bay depth to interlock for car\n",
     "C4 = [6.0, 6.5, 6.6, 6.3, 5.5] # Bay depth to wall for electric car\n",
     "C5 = [2.0, 2.2, 2.24, 2.12, 1.8] # Bay depth to wall for motorcylcle\n",
     "\n",
-    "D  = [7.0, 6.0, 4.5, 3.75, 3.5] # Aisle width between bay lines\n",
-    "F1 = [18.0, 17.75, 15.65, 13.45, 11.4] # Module, wall to interlock\n",
-    "F3 = [18.0, 17.4, 14.8, 12.55, 10.3] # Module, interlock to interlock\n"
+    "D1  = [7.0, 6.0, 4.5, 3.75, 3.5] # Aisle width between bay lines for car\n",
+    "D2  = [2.8, 2.4, 1.8, 1.5, 1.4] # Aisle width between bay lines for motorcycle\n",
+    "F1 = [18.0, 17.75, 15.65, 13.45, 11.4] # Module, wall to interlock (F1 = C1+D1+C3)\n",
+    "F3 = [18.0, 17.4, 14.8, 12.55, 10.3] # Module, interlock to interlock (F3 = C3+D1+C3)\n"
    ]
   },
   {
@@ -156,7 +158,7 @@
    ],
    "source": [
     "# Total width of full interior rows, full exterior rows, and exterior rows should be less than the width of  the parking lot\n",
-    "model.addConstr(quicksum(F3[i]*X[i] + F1[i]*Xe[i] + (C1[i]+D[i])*E[i] for i in range(num_of_angles)) <= B)\n",
+    "model.addConstr(quicksum(F3[i]*X[i] + F1[i]*Xe[i] + (C1[i]+D1[i])*E[i] for i in range(num_of_angles)) <= B)\n",
     "\n",
     "# The number of spots in each rows should be less than its upper bound\n",
     "# Upper bound = (max length of row / width of a spot) * number of rows\n",
