--- a/OR_FP.ipynb
+++ b/OR_FP.ipynb
@@ -39,9 +39,10 @@
     "A3 = [1.0, 1.08, 1.12, 1.4, 2.24]  # Bay width for motorcylcle, parallel to aisle\n",
     "C1 = [5.0, 5.5, 5.6, 5.3, 4.5] # Bay depth to wall for car\n",
     "C3 = [5.0, 5.15, 5.05, 4.40, 3.40] # Bay depth to interlock for car\n",
-    "C4 = [6.0, 6.5, 6.6, 6.3, 5.5] # Bay depth to wall for electric car\n",
-    "C5 = [6.0, 6.15, 6.05, 5.40, 4.40] # Bay depth to interlock for electric car\n",
-    "C6 = [2.0, 2.2, 2.24, 2.12, 1.8] # Bay depth to wall for motorcylcle\n",
+    "C4 = [6.0, 6.5, 6.6, 6.3, 5.5] # Bay depth to wall for electric car -> C1+1\n",
+    "C5 = [6.0, 6.15, 6.05, 5.40, 4.40] # Bay depth to interlock for electric car -> C3+1\n",
+    "C6 = [2.0, 2.2, 2.24, 2.12, 1.8] # Bay depth to wall for motorcylcle -> C1*0.4\n",
+    "C7 = [2.0, 2.06, 2.02, 1.76, 1.36] # Bay depth to interlock for motorcylcle -> C3*0.4\n",
     "\n",
     "D1  = [7.0, 6.0, 4.5, 3.75, 3.5] # Aisle width between bay lines for car\n",
     "D2  = [2.8, 2.4, 1.8, 1.5, 1.4] # Aisle width between bay lines for motorcycle\n",
