--- a/OR_FP.ipynb
+++ b/OR_FP.ipynb
@@ -36,7 +36,8 @@
     "\n",
     "''' Change parameters here if angles changed '''\n",
     "A2 = [2.5, 2.7, 2.8, 3.5, 5.6] # Bay width for car, parallel to aisle\n",
-    "A3 = [1.0, 1.08, 1.12, 1.4, 2.24]  # Bay width for motorcylcle, parallel to aisle\n",
+    "A3 = [1.0, 1.08, 1.12, 1.4, 2.24]  # Bay width for motorcylcle, parallel to aisle -> A2*0.4\n",
+    "\n",
     "C1 = [5.0, 5.5, 5.6, 5.3, 4.5] # Bay depth to wall for car\n",
     "C3 = [5.0, 5.15, 5.05, 4.40, 3.40] # Bay depth to interlock for car\n",
     "C4 = [6.0, 6.5, 6.6, 6.3, 5.5] # Bay depth to wall for electric car -> C1+1\n",
@@ -45,9 +46,10 @@
     "C7 = [2.0, 2.06, 2.02, 1.76, 1.36] # Bay depth to interlock for motorcylcle -> C3*0.4\n",
     "\n",
     "D1  = [7.0, 6.0, 4.5, 3.75, 3.5] # Aisle width between bay lines for car\n",
-    "D2  = [2.8, 2.4, 1.8, 1.5, 1.4] # Aisle width between bay lines for motorcycle\n",
+    "D2  = [2.8, 2.4, 1.8, 1.5, 1.4] # Aisle width between bay lines for motorcycle -> D1*0.4\n",
+    "\n",
     "F1 = [18.0, 17.75, 15.65, 13.45, 11.4] # Module, wall to interlock (F1 = C1+D1+C3)\n",
-    "F3 = [18.0, 17.4, 14.8, 12.55, 10.3] # Module, interlock to interlock (F3 = C3+D1+C3)\n"
+    "F3 = [18.0, 17.4, 14.8, 12.55, 10.3] # Module, interlock to interlock (F3 = C3+D1+C3)"
    ]
   },
   {
@@ -126,8 +128,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "##### Objective #####\n",
-    "\n",
     "# Maximize the total number of parking spots\n",
     "model.setObjective(\n",
     "    quicksum(n[i] + ne[i] + nEE[i] + nBev[i] + nMot[i] for i in range(num_of_angles)),\n",
