--- a/OR_FP.ipynb
+++ b/OR_FP.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
        "<gurobi.Constr *Awaiting Model Update*>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -194,45 +194,28 @@
       "CPU model: Intel(R) Core(TM) i5-1035G1 CPU @ 1.00GHz, instruction set [SSE2|AVX|AVX2|AVX512]\n",
       "Thread count: 4 physical cores, 8 logical processors, using up to 8 threads\n",
       "\n",
-      "Optimize a model with 17 rows, 50 columns and 55 nonzeros\n",
-      "Model fingerprint: 0x7de5fd84\n",
-      "Variable types: 0 continuous, 50 integer (0 binary)\n",
+      "Optimize a model with 47 rows, 93 columns and 135 nonzeros\n",
+      "Model fingerprint: 0x0ad86dc2\n",
+      "Variable types: 0 continuous, 93 integer (3 binary)\n",
       "Coefficient statistics:\n",
-      "  Matrix range     [1e+00, 9e+01]\n",
+      "  Matrix range     [1e+00, 2e+02]\n",
       "  Objective range  [1e+00, 1e+00]\n",
-      "  Bounds range     [0e+00, 0e+00]\n",
+      "  Bounds range     [1e+00, 1e+00]\n",
       "  RHS range        [2e+00, 1e+02]\n",
-      "Found heuristic solution: objective 42.0000000\n",
-      "Presolve removed 15 rows and 37 columns\n",
+      "Found heuristic solution: objective 2.344000e+12\n",
+      "Presolve removed 2 rows and 2 columns\n",
       "Presolve time: 0.00s\n",
-      "Presolved: 2 rows, 13 columns, 21 nonzeros\n",
-      "Variable types: 0 continuous, 13 integer (0 binary)\n",
-      "Found heuristic solution: objective 558.0000000\n",
       "\n",
-      "Root relaxation: objective 6.015000e+02, 2 iterations, 0.00 seconds (0.00 work units)\n",
+      "Explored 0 nodes (0 simplex iterations) in 0.04 seconds (0.00 work units)\n",
+      "Thread count was 1 (of 8 available processors)\n",
       "\n",
-      "    Nodes    |    Current Node    |     Objective Bounds      |     Work\n",
-      " Expl Unexpl |  Obj  Depth IntInf | Incumbent    BestBd   Gap | It/Node Time\n",
+      "Solution count 1: 2.344e+12 \n",
+      "No other solutions better than 0\n",
       "\n",
-      "     0     0  601.50000    0    1  558.00000  601.50000  7.80%     -    0s\n",
-      "H    0     0                     591.0000000  601.50000  1.78%     -    0s\n",
-      "     0     0  600.62887    0    3  591.00000  600.62887  1.63%     -    0s\n",
-      "     0     0  598.04348    0    2  591.00000  598.04348  1.19%     -    0s\n",
-      "H    0     0                     592.0000000  598.04348  1.02%     -    0s\n",
-      "     0     0  596.91045    0    4  592.00000  596.91045  0.83%     -    0s\n",
-      "\n",
-      "Cutting planes:\n",
-      "  Gomory: 1\n",
-      "  MIR: 3\n",
-      "  StrongCG: 1\n",
-      "\n",
-      "Explored 1 nodes (7 simplex iterations) in 0.07 seconds (0.00 work units)\n",
-      "Thread count was 8 (of 8 available processors)\n",
-      "\n",
-      "Solution count 4: 592 591 558 42 \n",
-      "\n",
-      "Optimal solution found (tolerance 1.00e-04)\n",
-      "Best objective 5.920000000000e+02, best bound 5.920000000000e+02, gap 0.0000%\n"
+      "Model is unbounded\n",
+      "Warning: some integer variables take values larger than the maximum\n",
+      "         supported value (2000000000)\n",
+      "Best objective 2.344000000068e+12, best bound -, gap -\n"
      ]
     }
    ],
@@ -250,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
