--- a/OR_FP_draw.ipynb
+++ b/OR_FP_draw.ipynb
@@ -20,7 +20,7 @@
    "source": [
     "def load_info(path):\n",
     "    info = {}\n",
-    "    with open(r'C:\\Users\\mayda\\Python practice\\OR\\LP_results.csv') as f:\n",
+    "    with open(r'C:\\Users\\mayda\\Python practice\\OR\\LP_results_new.csv') as f:\n",
     "        myCsv = csv.reader(f)\n",
     "        for row in myCsv:\n",
     "            x = np.array(row[1:], dtype=float)\n",
@@ -286,7 +286,7 @@
     }
    ],
    "source": [
-    "Draw(r'C:\\Users\\mayda\\Python practice\\OR\\LP_results.csv')\n",
+    "Draw(r'C:\\Users\\mayda\\Python practice\\OR\\LP_results_new.csv')\n",
     "\n",
     "# DRAW(B=40, L=60, w=7, X=np.array([0,0,1,0,0]), Xe=np.array([0,0,1,0,0]), E=np.array([0,1,0,0,0]))\n",
     "\n",
