--- a/OR_FP.ipynb
+++ b/OR_FP.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
        "<gurobi.Constr *Awaiting Model Update*>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
       "Presolve removed 2 rows and 2 columns\n",
       "Presolve time: 0.00s\n",
       "\n",
-      "Explored 0 nodes (0 simplex iterations) in 0.04 seconds (0.00 work units)\n",
+      "Explored 0 nodes (0 simplex iterations) in 0.02 seconds (0.00 work units)\n",
       "Thread count was 1 (of 8 available processors)\n",
       "\n",
       "Solution count 1: 2.344e+12 \n",
@@ -233,11 +233,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "results = open('LP_results.csv', 'w')\n",
+    "results = open('LP_results_new.csv', 'w')\n",
     "\n",
     "results.write(f'B, {B}')\n",
     "results.write(f'\\nL, {L}')\n",
