--- a/OR_FP.ipynb
+++ b/OR_FP.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,9 +11,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Set parameter Username\n",
+      "Academic license - for non-commercial use only - expires 2024-02-29\n"
+     ]
+    }
+   ],
    "source": [
     "##### Model #####\n",
     "\n",
@@ -62,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -153,14 +162,14 @@
        "<gurobi.Constr *Awaiting Model Update*>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Total width of full interior rows, full exterior rows, and exterior rows should be less than the width of  the parking lot\n",
-    "model.addConstr(quicksum(F3[i]*X[i] + F1[i]*Xe[i] + (C1[i]+D1[i])*E[i] for i in range(num_of_angles)) <= B)\n",
+    "model.addConstr(quicksum((2*C3[i]+D1[i])*X[i] + (C1[i]+D1[i]+C3[i])*Xe[i] + (C1[i]+D1[i])*E[i] for i in range(num_of_angles)) <= B)\n",
     "\n",
     "# The number of spots in each rows should be less than its upper bound\n",
     "# Upper bound = (max length of row / width of a spot) * number of rows\n",
@@ -182,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +204,7 @@
       "Thread count: 4 physical cores, 8 logical processors, using up to 8 threads\n",
       "\n",
       "Optimize a model with 47 rows, 93 columns and 135 nonzeros\n",
-      "Model fingerprint: 0x0ad86dc2\n",
+      "Model fingerprint: 0x31be0ade\n",
       "Variable types: 0 continuous, 93 integer (3 binary)\n",
       "Coefficient statistics:\n",
       "  Matrix range     [1e+00, 2e+02]\n",
@@ -233,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
